# referral-system-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  database.py  db.py  logger.py  main.py  redis.py
src/auth/: hasher.py  jwt.py  utils.py
src/databases/: __init__.py  postgres.py  redis.py
src/databases/docker/postgres/: Dockerfile
src/databases/docker/redis/: Dockerfile  entrypoint.sh
src/dependencies/: referrals.py  referrers.py
src/migrations/: env.py
src/migrations/versions/: 2024_11_01_1906-d5b0498ee75d_initial_commit.py  2024_11_01_1910-74fe07f0367b_add_test_referrer_and_his_referrals.py  2024_11_02_1026-2498b086f2e7_add_new_referrer.py  2024_11_05_1820-dad5ef4bacb0_init_commit.py  2024_11_10_1556-6f29b40eeba0_initial_commit.py
src/models/: referrals.py  referrers.py  users.py
src/repositories/: base.py  referrals.py  referrers.py  users.py
src/routers/: referrer.py  referrers.py  users.py  visitors.py
src/schemas/: referrals.py  referrers.py  tokens.py  users.py
src/services/: referrals.py  referrers.py  users.py
src/tests/: conftest.py  test_register.py
src/tests/auth/: test_register.py
