[tool.black]
target-version = ["py312"]

[tool.poetry]
name = "referral-system-api"
version = "0.1.0"
description = ""
authors = ["Maksim <mksmvnv@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
